feat: discrete smart pivot